--- a/index.html
+++ b/index.html
@@ -23,23 +23,18 @@
 
     <style>
         header {
-            background-image: url("img/nav.png") !important;
+            background-image: url("../img/nav.png") !important;
             background-size: 100% !important;
         }
 
         main {
-            background-image: url("img/background.png") !important;
             background-size: 100% !important;
             margin: 0px !important;
             padding: 0px !important;
         }
 
-        .card {
-            background-image: url("img/itemback.png");
-        }
-
         footer {
-            background-image: url("img/nav.png") !important;
+            background-image: url("../img/nav.png") !important;
             background-size: 100% !important;
         }
 
