--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <style>
         header {
-            background-image: url("../img/nav.png") !important;
+            background-image: url("/img/nav.png") !important;
             background-size: 100% !important;
         }
 
@@ -34,7 +34,7 @@
         }
 
         footer {
-            background-image: url("../img/nav.png") !important;
+            background-image: url("/img/nav.png") !important;
             background-size: 100% !important;
         }
 
