--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <style>
         header {
-            background-image: url("/img/nav.png") !important;
+            background-image: url("https://github.com/cjasmine5168/demo/blob/gh-pages/img/nav.png") !important;
             background-size: 100% !important;
         }
 
