--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <style>
         header {
-            background-image: url("img/nav.png");
+            background-image: url("../img/nav.png");
             background-size: 100% !important;
         }
 
