--- a/argentina.html
+++ b/argentina.html
@@ -173,7 +173,7 @@
         <section class="pt-3 text-center">
             <div class="container">
                 <div class="row">
-                    <h1 style="color: white;text-decoration: underline;">Italy</h1>
+                    <h1 style="color: white;text-decoration: underline;">Argentina</h1>
                 </div>
             </div>
         </section>
