--- a/french.html
+++ b/french.html
@@ -51,20 +51,27 @@
                 <div class="row">
                     <div class="col-9">
                         <a href="index.html" class="navbar-brand d-flex align-items-center">
-                            <!-- <strong class="me-2 fs-3" style="color: white;">COZY TIME</strong> -->
                             <img src="img/logo.svg" class="img-fluid" width="50%" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-4 pe-3">
+                        <input type="text" class="form-control2" id="recipient-name" placeholder="Search">
+                    </div>
+                    <div class="col-2">
+                        <button type="button" class="btn">
+                            <i class="fas fa-search fa-lg" style="color: rgba(255,255,255,0.55);"></i>
+                        </button>
+                    </div>
+                    <div class="col-2">
                         <a href="cart.html">
                             <button type="button" class="btn">
                                 <i class="fas fa-shopping-cart fa-lg" style="color: rgba(255,255,255,0.55);"></i>
                             </button>
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-2">
                         <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <i class="fas fa-user-alt fa-lg" style="color: rgba(255,255,255,0.55);"></i>
                         </button>
@@ -81,7 +88,7 @@
                                         <div class="modal-body">
                                             <div class="mb-3">
                                                 <label for="recipient-name" class="col-form-label">Username:</label>
-                                                <input type="text" class="form-control" id="recipient-name" required>
+                                                <input type="text" class="form-control" required>
                                             </div>
                                             <div class="mb-3">
                                                 <label for="recipient-name" class="col-form-label">Password:</label>
@@ -101,58 +108,60 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-2">
                         <button class="navbar-toggler" onclick="openNav()">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                     </div>
-                    <div id="myNav" class="overlay">
-                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                        <div class="overlay-content">
-                            <nav class="navbar navbar-expand-lg rounded" aria-label="Twelfth navbar example">
-                                <div class="container-fluid">
-                                    <div class="navbar-collapse justify-content-md-center" id="navbarsExample10">
-                                        <ul class="navbar-nav">
-                                            <li class="nav-item">
-                                                <a class="nav-link" aria-current="page" href="about.html">About Us</a>
-                                            </li>
-                                            <li class="nav-item dropdown">
-                                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
-                                                    role="button" aria-expanded="false">Wines</a>
-                                                <ul class="dropdown-menu text-center" style="min-width: 16rem;">
-                                                    <li><a class="dropdown-item" href="french.html">All Wines</a></li>
-                                                    <li>
-                                                        <hr class="dropdown-divider">
-                                                    </li>
-                                                    <li><a class="dropdown-item" href="red.html">Red Wine</a></li>
-                                                    <li><a class="dropdown-item" href="white.html">White Wine</a></li>
-                                                    <li><a class="dropdown-item" href="sparkling.html">Sparkling
-                                                            Wine</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="nav-item dropdown">
-                                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
-                                                    role="button" aria-expanded="false">Country</a>
-                                                <ul class="dropdown-menu text-center" style="min-width: 16rem;">
-                                                    <li><a class="dropdown-item" href="Italy.html">Italy</a></li>
-                                                    <li><a class="dropdown-item" href="french.html">French</a></li>
-                                                    <li><a class="dropdown-item" href="germany.html">Germany</a></li>
-                                                    <li><a class="dropdown-item" href="argentina.html">Argentina</a>
-                                                    </li>
-                                                    <li><a class="dropdown-item" href="usa.html">United States</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" aria-current="page" href="member.html">Member
-                                                    Profile</a>
-                                            </li>
-                                        </ul>
-                                    </div>
+
+                </div>
+                <div id="myNav" class="overlay">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <div class="overlay-content">
+                        <nav class="navbar navbar-expand-lg rounded" aria-label="Twelfth navbar example">
+                            <div class="container-fluid">
+                                <div class="navbar-collapse justify-content-md-center" id="navbarsExample10">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item">
+                                            <a class="nav-link" aria-current="page" href="about.html">About Us</a>
+                                        </li>
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
+                                                role="button" aria-expanded="false">Wines</a>
+                                            <ul class="dropdown-menu text-center" style="min-width: 16rem;">
+                                                <li><a class="dropdown-item" href="product.html">All Wines</a></li>
+                                                <li>
+                                                    <hr class="dropdown-divider">
+                                                </li>
+                                                <li><a class="dropdown-item" href="red.html">Red Wine</a></li>
+                                                <li><a class="dropdown-item" href="white.html">White Wine</a></li>
+                                                <li><a class="dropdown-item" href="sparkling.html">Sparkling Wine</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
+                                                role="button" aria-expanded="false">Country</a>
+                                            <ul class="dropdown-menu text-center" style="min-width: 16rem;">
+                                                <li><a class="dropdown-item" href="italy.html">Italy</a></li>
+                                                <li><a class="dropdown-item" href="french.html">French</a></li>
+                                                <li><a class="dropdown-item" href="germany.html">Germany</a></li>
+                                                <li><a class="dropdown-item" href="argentina.html">Argentina</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="usa.html">United States</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" aria-current="page" href="member.html">Member
+                                                Profile</a>
+                                        </li>
+                                    </ul>
                                 </div>
-                            </nav>
-                        </div>
+                            </div>
+                        </nav>
                     </div>
                 </div>
+
             </div>
         </div>
     </header>
