--- a/usa.html
+++ b/usa.html
@@ -143,7 +143,7 @@
                                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
                                                 role="button" aria-expanded="false">Country</a>
                                             <ul class="dropdown-menu text-center" style="min-width: 16rem;">
-                                                <li><a class="dropdown-item" href="Italy.html">Italy</a></li>
+                                                <li><a class="dropdown-item" href="italy.html">Italy</a></li>
                                                 <li><a class="dropdown-item" href="french.html">French</a></li>
                                                 <li><a class="dropdown-item" href="germany.html">Germany</a></li>
                                                 <li><a class="dropdown-item" href="argentina.html">Argentina</a>
@@ -165,7 +165,6 @@
             </div>
         </div>
     </header>
-
     <main>
 
         <!-- Red -->
