--- a/product_detail.html
+++ b/product_detail.html
@@ -213,7 +213,7 @@
         </div>
     </header>
 
-    <main class="px-8 py-5">
+    <main class="px-7 py-5">
         <section>
             <div class="container">
                 <div class="row py-6 px-5">
@@ -370,7 +370,8 @@
                                     <h5 class="card-title text-center">Grand Vintage Rosé</h5>
                                     <h6 class="text-end" style="color: black;">NT$ 970</h6>
                                     <hr class="myhr">
-                                    <p class="card-text" style="color: black;">2007年通過Antinori家族的經驗與該地區表現出的高葡萄栽培質量之間的相互作用而製作出的，選用Chardonnay,
+                                    <p class="card-text" style="color: black;">
+                                        2007年通過Antinori家族的經驗與該地區表現出的高葡萄栽培質量之間的相互作用而製作出的，選用Chardonnay,
                                         Pinot
                                         Nero, and Pinot Bianco三種葡萄創造出這款氣泡酒</p>
                                     <hr class="myhr">
@@ -386,7 +387,8 @@
                                     <h5 class="card-title text-center">Contessa Maggi</h5>
                                     <h6 class="text-end" style="color: black;">NT$ 970</h6>
                                     <hr class="myhr">
-                                    <p style="color: black;" class="card-text">2007年通過Antinori家族的經驗與該地區表現出的高葡萄栽培質量之間的相互作用而製作出的，選用Chardonnay,
+                                    <p style="color: black;" class="card-text">
+                                        2007年通過Antinori家族的經驗與該地區表現出的高葡萄栽培質量之間的相互作用而製作出的，選用Chardonnay,
                                         Pinot
                                         Nero, and Pinot Bianco三種葡萄創造出這款氣泡酒</p>
                                     <hr class="myhr">
@@ -402,7 +404,8 @@
                                     <h5 class="card-title text-center">Rosé Impérial</h5>
                                     <h6 class="text-end" style="color: black;">NT$ 970</h6>
                                     <hr class="myhr">
-                                    <p style="color: black;" class="card-text">2007年通過Antinori家族的經驗與該地區表現出的高葡萄栽培質量之間的相互作用而製作出的，選用Chardonnay,
+                                    <p style="color: black;" class="card-text">
+                                        2007年通過Antinori家族的經驗與該地區表現出的高葡萄栽培質量之間的相互作用而製作出的，選用Chardonnay,
                                         Pinot
                                         Nero, and Pinot Bianco三種葡萄創造出這款氣泡酒</p>
                                     <hr class="myhr">
@@ -417,8 +420,9 @@
                 <h1 class="text-center mb-4">Comments</h1>
                 <div class="input-group mb-3">
                     <span class="input-group-text me-3 btn-secondary" style="border-radius: .25rem;">匿名</span>
-                    <input type="text" class="form-control3" style="border-radius: .25rem;" placeholder="匿名投稿" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
+                    <input type="text" class="form-control3" style="border-radius: .25rem;" placeholder="匿名投稿"
+                        aria-label="Username" aria-describedby="basic-addon1">
+                </div>
                 <div class="input-group ">
                     <textarea class="form-control" rows="1" aria-label="With textarea"
                         placeholder="write done your comment......"></textarea>
