--- a/product_detail.html
+++ b/product_detail.html
@@ -275,8 +275,8 @@
                                 <p class="mb-0 text-center fs-5 ms-2 py-3">(庫存：3)</p>
                             </div>
                             <div class="d-grid gap-2 mt-5 d-md-flex justify-content-md-end">
-                                <button class="btn btn-secondary me-md-2" type="button">Add to Cart</button>
-                                <button class="btn btn-primary" type="button">Buy it Now</button>
+                                <a href="cart.html"><button class="btn btn-secondary me-md-2" type="button">Add to Cart</button></a>
+                                <a href="cart.html"><button class="btn btn-primary" type="button">Buy it Now</button></a>
                             </div>
                         </div>
                     </div>
